Simplify a handful of tests